# mac-kiosk

./: .gitignore  README.md  chrome-auto-refresh.sh  pyproject.toml  start.sh
kiosk/: cli.py  config.py  hammerspoon.py  launch_agent.py
kiosk/assets/: __init__.py
mac_kiosk/: cli.py  config.py  hammerspoon.py  launch_agent.py  system.py
mac_kiosk/assets/: __init__.py
tears_kiosk/: __init__.py  cli.py  config.py  hammerspoon.py  launch_agent.py  system.py
tears_kiosk/assets/: __init__.py  hammerspoon_init.lua
tests/: test_cli.py  test_config.py  test_hammerspoon.py  test_launch_agent.py  test_system.py
